2004-08-07  terry <terry470@users.sf.net>

	* added doc patch from Jeff Ratliff - covers the sidebar search.
	
2004-01-14  Andy <andyp@users.sf.net>

	* added gnomesword.doap.rdf, the DOAP description for the project
	  currently used on the website and may gain wider usage in time, 
	  either way it is useful to have it maintained in CVS

2004-07-14  terry <tbiggs@users.sf.net>

	* fixed broken include in /backend/sword.cpp
	* bumped to 2.1.1 and released
	
	
2004-07-13  terry <tbiggs@users.sf.net>

	* bumped to 2.1.0 and released
	
	
2004-05-15  Pierre <pierrebenz@users.sf.net>

	* changed settings directory to .gnomesword-2.0
	
	
2004-05-15 Terry <tbiggs@users.sf.net>

	* removed backend/mgr.hh and backend/mgr.cc
	* removed backend/sword_defs.h
	
	
2004-05-14 Terry <tbiggs@users.sf.net>

	* removed backend/key.hh and backend/key.cc
	* removed main/key.h and main/key.c
	

2004-05-13 Terry <tbiggs@users.sf.net>

	* removed main/search.h and main/search.c
	* removed main/module.h and main/module.c
	

2004-04-21 Terry <tbiggs@users.sf.net>

	* added main/search_dialog.cc and main/search_dialog.h
	* added main/search_sidebar.cc and main/search_sidebar.h
	* removed backend/dialogs.cc and backend/dialogs.hh


2004-04-07 Terry <tbiggs@users.sf.net>

	* removed backend/tree.cc and backend/tree.hh
	* removed gui/gtkhtml_display.h and gnome2/gtkhtml_display.c
		

2004-04-02 Terry <tbiggs@users.sf.net>

	* added gnome2/note_editor.c and gui/note_editor.h
	* added gnome2/note_toolbar_edit.c and gui/note_toolbar_edit.h
	* added gnome2/note_toolbar_style.c and gui/note_toolbar_style.h
	* removed gnome2/percomm.c and gui/percomm.h
	

2004-03-30  Terry <tbiggs@users.sf.net>

	* completely reworked gnome2/commentary_dialog.c
	* completely reworked gnome2/dictionary_dialog.c
	* completely reworked gnome2/gbs_dialog.c
	* removed gui/commentary_menu.h and gnome2/commentary_menu.c
	* removed gui/dictionary_menu.h and gnome2/dictionary_menu.c