@@ -468,6 +468,8 @@ void gui_create_dictlex_dialog(DIALOG_DATA *dlg)
 				       (scrolledwindowDictHTML),
 				       GTK_POLICY_AUTOMATIC,
 				       GTK_POLICY_AUTOMATIC);
+	gtk_scrolled_window_set_shadow_type((GtkScrolledWindow *)scrolledwindowDictHTML,
+                                             settings.shadow_type);
 
 
 	dlg->html = gtk_html_new();
