@@ -377,6 +377,8 @@ void gui_create_parallel_page(void)
 	gtk_scrolled_window_set_policy(GTK_SCROLLED_WINDOW(scrolled_window),
 				       GTK_POLICY_AUTOMATIC,
 				       GTK_POLICY_ALWAYS);
+	gtk_scrolled_window_set_shadow_type((GtkScrolledWindow *)scrolled_window,
+                                             settings.shadow_type);
 
 	settings.dockedInt = TRUE;
 
